force-app/main/default/objects/rv_Rig__c/rv_Rig__c.object-meta.xml
<CustomObject>
    <description>Rigs of customers</description>
    <label>Rig</label>
    <nameField>
        <displayFormat>RV-{0000}</displayFormat>
        <label>Rig Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rigs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>