force-app/main/default/objects/rv_Rig__c/fields/Drive__c.field-meta.xml
<CustomField>
    <fullName>Drive__c</fullName>
    <description>Drive wheels</description>
    <label>Drive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FWD</fullName>
            </value>
            <value>
                <fullName>RWD</fullName>
            </value>
            <value>
                <fullName>AWD</fullName>
            </value>
            <value>
                <fullName>4WD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>