force-app/main/default/objects/rv_Rig__c/fields/Engine__c.field-meta.xml
<CustomField>
    <fullName>Engine__c</fullName>
    <description>Engine Specification</description>
    <inlineHelpText
  >Enter in engine liters and cylinders - 5.0 V8</inlineHelpText>
    <label>Engine</label>
    <length>150</length>
    <type>Text</type>
</CustomField>