force-app/main/default/objects/rv_Rig__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <description>Model, Submanufacturer of Rig</description>
    <label>Model</label>
    <length>120</length>
    <type>Text</type>
</CustomField>