force-app/main/default/objects/rv_Rig__c/fields/Model_Year__c.field-meta.xml
<CustomField>
    <fullName>Model_Year__c</fullName>
    <description>Model Year</description>
    <label>Model Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>