force-app/main/default/objects/rv_Rig__c/fields/Motor_Fuel_Type__c.field-meta.xml
<CustomField>
    <fullName>Motor_Fuel_Type__c</fullName>
    <description>Type of fuel</description>
    <inlineHelpText>Engine Fuel Type</inlineHelpText>
    <label>Motor Fuel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>rv_Fuel_Type</valueSetName>
    </valueSet>
</CustomField>