force-app/main/default/objects/rv_Rig__c/fields/Plate_Number__c.field-meta.xml
<CustomField>
    <fullName>Plate_Number__c</fullName>
    <description>License Plate Number</description>
    <inlineHelpText>License Plate Number</inlineHelpText>
    <label>Plate Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>