force-app/main/default/objects/rv_Rig__c/fields/Specifications__c.field-meta.xml
<CustomField>
    <fullName>Specifications__c</fullName>
    <description>Rig specifications</description>
    <label>Specifications</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>