force-app/main/default/objects/rv_Rig__c/recordTypes/Camper.recordType-meta.xml
<RecordType>
    <fullName>Camper</fullName>
    <active>true</active>
    <description>Bedtop camper</description>
    <label>Camper</label>
</RecordType>