force-app/main/default/objects/rv_Rig__c/recordTypes/Motorhome.recordType-meta.xml
<RecordType>
    <fullName>Motorhome</fullName>
    <active>true</active>
    <description>Self Powered RV</description>
    <label>Motorhome</label>
</RecordType>