force-app/main/default/objects/rv_Rig__c/recordTypes/Tow_Vehicle.recordType-meta.xml
<RecordType>
    <fullName>Tow_Vehicle</fullName>
    <active>true</active>
    <description>Motor vehicle without living space</description>
    <label>Tow Vehicle</label>
</RecordType>