force-app/main/default/objects/rv_Rig__c/recordTypes/Travel_Trailer.recordType-meta.xml
<RecordType>
    <fullName>Travel_Trailer</fullName>
    <active>true</active>
    <description>Towable Trailer</description>
    <label>Travel Trailer</label>
</RecordType>